<resources>
    <string name="app_name">BeautyShop</string>

    <string name="product_type">Тип продукта</string>
    <string name="product_category">Категория</string>
    <string name="product_tags">Теги</string>
    <string name="brand">Бренд</string>
    <string name="price1">Цена от</string>
    <string name="price2">Цена до</string>
    <string name="rating">Рейтинг</string>
    <string name="apply">Принять</string>
    <string name="reset">Сбросить</string>
    <string name="add">Добавить в корзину</string>
    <string name="empty">Корзина пуста</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Искать в BeautyShop</string>
    <string name="filter">Фильтр</string>
    <string name="shop_bag">Корзина</string>

</resources>